--- a/LAST/index.html
+++ b/LAST/index.html
@@ -64,7 +64,7 @@
           
             <div class="tab-contents" id="research experience">
               <ul>
-                <li><span>Nov 2021 till date</span><br>Research Scientist at Ijedodo Primary Health Center</li>
+                <li><span>Nov 2021 till date</span><br>Research Scientist at Ijedodo Primary Health Care Center</li>
               </ul>
             </div>
           
