--- a/LAST/index.html
+++ b/LAST/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="about-col-2">
           <h1 class = "sub-title">About Me</h1>
-            <p>"Hey there! I'm Akon, a passionate analyst with a passion to unveil the stories hidden within data. I love diving into complex datasets, finding patterns, and turning numbers into meaningful insights. By blending my analytical skills with a touch of creativity and finance, I help businesses make smarter decisions and drive growth. Let's embark on a data-driven adventure together, where we'll uncover valuable insights that can shape your success."</p>
+            <p>"Hey there! I'm Akon, a passionate analyst with a passion to unveil the stories hidden within data. I love diving into complex datasets, finding patterns, and turning numbers into meaningful insights. I blend my analytical skills with a touch of creativity and research."</p>
             
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -70,7 +70,7 @@
           
             <div class="tab-contents" id="professional experience">
               <ul>
-                <li><span>June 2023 till date</span><br>Senior Business Intelligence Developer at Carbon</li>
+                <li><span>June 2023 till Mach 2024</span><br>Senior Business Intelligence Developer at Carbon</li>
                 <li><span>October 2021 till June 2023</span><br>Data Scientist at Wema Bank</li>
                 <li><span>June 2017-October 2021</span><br>Customer Data Analyst at Access Bank</li>
               </ul>
@@ -198,7 +198,7 @@
     <div class="row">
       <div class="contact-left">
         <h1 class="sub-title">Contact Me</h1>
-        <p><i class="fa-solid fa-paper-plane"></i> usohakon@gmail.com</p>
+        <p><i class="fa-solid fa-paper-plane"></i> akonusoh@gmail.com</p>
         <p><i class="fa-solid fa-square-phone"></i>07066210475</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/akonusoh/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
@@ -220,7 +220,7 @@
     </div>
   </div>
   <div class="copyright">
-    <p>Copyright &copy; Akon Usoh 2023.</p>
+    <p>Copyright &copy; Akon Usoh 2024.</p>
   </div>
  </div>
 
